--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             ><i class="fas fa-arrow-right"></i> Our services</a
           >
         </div>
+        <h1>hello</h1>
       </div>
       <!-- end of banner -->
     </header>
