fixing some javascript issues

--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
             ><i class="fas fa-arrow-right"></i> Our services</a
           >
         </div>
-        <h1>hello</h1>
       </div>
       <!-- end of banner -->
     </header>
@@ -600,7 +599,7 @@
     <!-- end of footer -->
 
     <script
-      src="http://code.jquery.com/jquery-3.3.1.js"
+      src="https://code.jquery.com/jquery-3.3.1.js"
       integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
       crossorigin="anonymous"
     ></script>
@@ -614,6 +613,6 @@
       integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
       crossorigin="anonymous"
     ></script>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
