--- a/contact.html
+++ b/contact.html
@@ -286,6 +286,6 @@
       integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
       crossorigin="anonymous"
     ></script>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
