added media queries

--- a/about.html
+++ b/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      name="description"
+      content="Service Bindery Florida's Preferred trade book bindery located in St. Petersburg Florida. Trade Bindery, Printing, UV Coating."
+    />
     <link rel="icon" href="images/title-img.png" />
     <link
       rel="stylesheet"
@@ -82,9 +86,10 @@
     </header>
 
     <!-- Cases -->
-    <section id="cases" class="cases flex-grid section-padding bg-secondary">
+    <section id="cases" class="cases flex-grid section-padding bg-dark">
       <header class="section-header text-light">
-        <h2>Our Shop</h2>
+        <h2 class="mb-3">Our Shop</h2>
+        <div class="section-line-services mt-0 mb-4"></div>
         <p>Here are some photos of Service Bindery in action!</p>
       </header>
 
@@ -145,6 +150,19 @@
             data-title="Ready for production!"
             ><img class="img-about" src="images/cases/cases8.jpg" alt=""
           /></a>
+        </div>
+      </div>
+    </section>
+    <section class="bg-secondary py-0">
+      <div class="container-fluid">
+        <!-- title -->
+        <div class="row text-light text-center">
+          <div class="col m-4">
+            <h1 class="display-4 mt-2 services-fptb">
+              - <span class="h1-services">Florida's</span> Preferred Trade
+              Bindery -
+            </h1>
+          </div>
         </div>
       </div>
     </section>
