--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      name="description"
+      content="Service Bindery Florida's Preferred trade book bindery located in St. Petersburg Florida. Trade Bindery, Printing, UV Coating."
+    />
     <link rel="icon" href="images/title-img.png" />
     <link
       rel="stylesheet"
@@ -106,7 +110,7 @@
         <div class="row my-5">
           <div class="col-md-4 text-center">
             <i class="fa-solid services-icons fa-book fa-5x mb-4"></i>
-            <h1 class="text-white mb-3">Perfect Binding</h1>
+            <h1 class="text-white mb-3 s-heading">Perfect Binding</h1>
             <p class="text-muted">
               Perfect Binding is the process in which the inside pages of a
               publication are ground down and glued at the spine before a soft
@@ -117,7 +121,7 @@
           </div>
           <div class="col-md-4 text-center">
             <i class="fa-brands services-icons fa-readme fa-5x mb-4"></i>
-            <h1 class="text-white mb-3">Buckle Folding</h1>
+            <h1 class="text-white mb-3 s-heading">Buckle Folding</h1>
             <p class="text-muted">
               UV coating, is a surface treatment process where liquid UV ink is
               applied to a printed paper surface and cured on our screen press
@@ -128,7 +132,7 @@
           </div>
           <div class="col-md-4 text-center">
             <i class="fa-solid services-icons fa-coins fa-5x mb-4"></i>
-            <h1 class="text-white mb-3">Coil & Wire-O</h1>
+            <h1 class="text-white mb-3 s-heading">Coil & Wire-O</h1>
             <p class="text-muted">
               This binding process includes punching the printed material,
               inserting the coil, and cutting and crimping the ends of the coil.
@@ -152,7 +156,7 @@
           <div
             class="col-lg-7 text-white text-lg-right text-center mission-text"
           >
-            <h1>Folding-Gluing</h1>
+            <h1 class="carton-heading">Folding-Gluing</h1>
             <p class="lead">
               Our folder-gluer is a machine that takes a stream of flat open box
               material (called blanks) that has been produced by a die-cutter
@@ -187,9 +191,9 @@
               <img src="images/home-imgs/rock.jpeg" class="card-img" />
               <div class="card-img-overlay">
                 <h5
-                  class="text-white text-uppercase font-weight-bold p-2 services-heading"
+                  class="text-white text-uppercase font-weight-bold p-2 services-heading card-text"
                 >
-                  Rock Festival Spot UV Business Cards
+                  Spot UV Business Cards
                 </h5>
               </div>
             </div>
@@ -199,7 +203,7 @@
               <img src="images/home-imgs/liberty.jpeg" class="card-img" />
               <div class="card-img-overlay">
                 <h5
-                  class="text-white text-uppercase font-weight-bold p-2 heading"
+                  class="text-white text-uppercase font-weight-bold p-2 heading card-text"
                 >
                   Raised UV Business Cards
                 </h5>
@@ -211,9 +215,9 @@
               <img src="images/home-imgs/gentleman.jpeg" class="card-img" />
               <div class="card-img-overlay">
                 <h5
-                  class="text-white text-uppercase font-weight-bold p-2 heading"
+                  class="text-white text-uppercase font-weight-bold p-2 heading card-text"
                 >
-                  Gentleman Raised UV Business Cards
+                  Raised spot UV Business Cards
                 </h5>
               </div>
             </div>
@@ -223,9 +227,9 @@
               <img src="images/home-imgs/polished.jpeg" class="card-img" />
               <div class="card-img-overlay">
                 <h5
-                  class="text-white text-uppercase font-weight-bold p-2 heading"
+                  class="text-white text-uppercase font-weight-bold p-2 heading card-text"
                 >
-                  Polished Raised UV Business Cards
+                  Spot UV Business Cards
                 </h5>
               </div>
             </div>
@@ -235,9 +239,9 @@
               <img src="images/home-imgs/sublime.jpeg" class="card-img" />
               <div class="card-img-overlay">
                 <h5
-                  class="text-white text-uppercase font-weight-bold p-2 heading"
+                  class="text-white text-uppercase font-weight-bold p-2 heading card-text"
                 >
-                  Spot UV Business Cards
+                  Clear Spot UV Business Cards
                 </h5>
               </div>
             </div>
@@ -247,9 +251,9 @@
               <img src="images/home-imgs/pridek.jpeg" class="card-img" />
               <div class="card-img-overlay">
                 <h5
-                  class="text-white text-uppercase font-weight-bold p-2 services-heading"
+                  class="text-white text-uppercase font-weight-bold p-2 services-heading card-text"
                 >
-                  Prideking Black Raised UV Business Cards
+                  Black spot UV Business Cards
                 </h5>
               </div>
             </div>
@@ -260,11 +264,11 @@
     <!-- end of collection -->
     <!-- customers -->
     <section class="p-5 customers">
-      <div class="container-fluid">
+      <div class="container-fluid google-container">
         <!-- title -->
         <div class="row text-white text-center">
           <div class="col m-4">
-            <h1 class="google mb-4">
+            <h1 class="google google-text mb-4">
               <span class="g">G</span><span class="o">o</span
               ><span class="oy">o</span><span class="g">g</span
               ><span class="l">l</span><span class="o">e</span> Reviews
@@ -290,7 +294,7 @@
                 <li data-target="#customer-carousel" data-slide-to="1"></li>
                 <li data-target="#customer-carousel" data-slide-to="2"></li>
               </ol>
-              <div class="carousel-inner">
+              <div class="carousel-inner google-car">
                 <div class="carousel-item active text-center">
                   <img
                     src="images/home-imgs/customer1.jpeg"
@@ -298,7 +302,7 @@
                     width="150"
                   />
                   <blockquote class="blockquote text-white">
-                    <p class="mb-5">The best at what they do</p>
+                    <p class="mb-2 google-par">The best at what they do</p>
                   </blockquote>
                   <h5 class="text-light text-uppercase font-weight-bold mb-3">
                     Jared Lewis (JsmoothN813)
@@ -328,13 +332,13 @@
                     width="150"
                   />
                   <blockquote class="blockquote text-white">
-                    <p class="mb-5">
+                    <p class="mb-2 google-par">
                       Prompt and Excellent service... Always a pleasure! Would
                       definitely recommend.
                     </p>
                   </blockquote>
                   <h5 class="text-light text-uppercase font-weight-bold mb-3">
-                    Stephanie “Kid Trippy Fan” Carrico
+                    Stephanie Carrico
                   </h5>
                   <ul class="list-inline mb-5">
                     <li class="list-inline-item">
@@ -361,7 +365,7 @@
                     width="150"
                   />
                   <blockquote class="blockquote text-white">
-                    <p class="mb-5">Awesome</p>
+                    <p class="mb-5 google-par">Awesome</p>
                   </blockquote>
                   <h5 class="text-light text-uppercase font-weight-bold mb-3">
                     Kyle Mcmahan
@@ -399,9 +403,9 @@
         <!-- title -->
         <div class="row text-muted text-center">
           <div class="col m-4">
-            <h1 class="display-4 mb-4">Our Mission</h1>
-            <div class="underline-dark mb-4"></div>
-            <p class="lead">What we provide</p>
+            <h1 class="display-4 mb-2 mission-heading">Our Mission</h1>
+            <div class="underline mb-3"></div>
+            <p class="lead mission-p">What we provide</p>
           </div>
         </div>
         <!-- end of title -->
@@ -482,7 +486,7 @@
           </div>
         </div>
         <div class="my-5">
-          <h2 class="text-muted mb-4">
+          <h2 class="text-muted m-txt mb-4">
             Thank you for choosing Service Bindery!
           </h2>
           <i class="fa-solid services-icons fa-handshake fa-3x mb-4"></i>
@@ -614,6 +618,5 @@
       crossorigin="anonymous"
     ></script>
     <script src="script.js"></script>
-    
   </body>
 </html>
