--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      name="description"
+      content="Service Bindery Florida's Preferred trade book bindery located in St. Petersburg Florida. Trade Bindery, Printing, UV Coating."
+    />
     <link rel="icon" href="images/title-img.png" />
     <link
       rel="stylesheet"
@@ -134,20 +138,29 @@
       <div class="container">
         <div class="contact-info">
           <div>
-            <i class="fas fa-envelope fa-2x mb-3" style="color: #00a2e2"></i>
+            <a href="mailto:servicebindery@yahoo.com"
+              ><i class="fas fa-envelope fa-2x mb-3" style="color: #00a2e2"></i
+            ></a>
             <h3 class="icon-info">Email</h3>
             <p>jeff.cleeves@servicebindery.com</p>
           </div>
           <div>
-            <i class="fas fa-phone fa-2x mb-3" style="color: #00a2e2"></i>
+            <a href="tel:(727) 823-9866"
+              ><i class="fas fa-phone fa-2x mb-3" style="color: #00a2e2"></i
+            ></a>
             <h3 class="icon-info">Phone</h3>
             <p>(727) 823-9866</p>
           </div>
           <div>
-            <i
-              class="fas fa-address-card fa-2x mb-3"
-              style="color: #00a2e2"
-            ></i>
+            <a
+              class="footer-link"
+              href="https://www.google.com/maps/dir//Service+Bindery+Enterprises,+3228+Morris+St+N,+St.+Petersburg,+FL+33713/@27.800867,-82.6721207,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x88c2e395552a02b5:0xfd1ddaf13ecf67d4!2m2!1d-82.669932!2d27.800867"
+              target="_blank"
+              ><i
+                class="fas fa-address-card fa-2x mb-3"
+                style="color: #00a2e2"
+              ></i
+            ></a>
             <h3 class="icon-info">Address</h3>
             <p>3228 Morris St N, St. Petersburg, FL 33713</p>
           </div>
