fixed home page footer

--- a/index.html
+++ b/index.html
@@ -493,6 +493,19 @@
         </div>
       </div>
     </section>
+    <section class="bg-secondary py-0">
+      <div class="container-fluid">
+        <!-- title -->
+        <div class="row text-light text-center">
+          <div class="col m-4">
+            <h1 class="display-4 mt-2 services-fptb">
+              - <span class="h1-services">Florida's</span> Preferred Trade
+              Bindery -
+            </h1>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- end of pricing -->
 
     <!-- footer -->
