fixed the navbar

--- a/contact.html
+++ b/contact.html
@@ -93,6 +93,7 @@
           Have questions about our services, jobs, or pricing? Our team is ready
           to help you.
         </p>
+        <div class="section-line-services mt-0 mb-4"></div>
         <form method="POST" data-netlify="true" data-netlify-recaptcha="true">
           <div class="text-fields">
             <input
@@ -168,12 +169,17 @@
       </div>
     </section>
 
-    <section id="contact-c" class="'bg-main py-4">
-      <div class="container">
-        <h1>
-          - <span class="h1-services">Florida's</span> Preferred Trade Bindery
-          and UV Coating -
-        </h1>
+    <section class="bg-light py-0">
+      <div class="container-fluid">
+        <!-- title -->
+        <div class="row text-secondary text-center">
+          <div class="col m-4">
+            <h1 class="display-4 mt-2 mb-2 services-fptb">
+              - <span class="h1-services">Florida's</span> Preferred Trade
+              Bindery -
+            </h1>
+          </div>
+        </div>
       </div>
     </section>
 
