--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
       <!-- banner -->
       <div class="text-light text-md-right text-center banner">
-        <h1 class="display-4 banner-heading">
+        <h1 class="display-4 banner-heading mb-2">
           Welcome to <span class="service">Service</span> Bindery
         </h1>
         <p class="lead banner-par">
