--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
       <!-- navbar -->
       <nav class="navbar navbar-expand-lg fixed-top nav-menu">
         <a href="#" class="navbar-brand text-light text-uppercase"
-          ><img class="nav-logo" src="images/title-img2.png" alt=""
+          ><img class="nav-logo" src="images/title-img2.png" alt="navbar logo"
         /></a>
         <button
           class="navbar-toggler nav-button"
@@ -89,8 +89,8 @@
     <section id="cases" class="cases flex-grid section-padding bg-dark">
       <header class="section-header text-light">
         <h2 class="mb-3">Our Shop</h2>
-        <div class="section-line-services mt-0 mb-4"></div>
         <p>Here are some photos of Service Bindery in action!</p>
+        <div class="section-line-services mt-0 mb-4"></div>
       </header>
 
       <div class="row">
@@ -153,12 +153,12 @@
         </div>
       </div>
     </section>
-    <section class="bg-secondary py-0">
+    <section class="bg-light py-0">
       <div class="container-fluid">
         <!-- title -->
-        <div class="row text-light text-center">
+        <div class="row text-secondary text-center">
           <div class="col m-4">
-            <h1 class="display-4 mt-2 services-fptb">
+            <h1 class="display-4 mt-2 services-fptb mb-0 mt-0">
               - <span class="h1-services">Florida's</span> Preferred Trade
               Bindery -
             </h1>
