--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
       <!-- navbar -->
       <nav class="navbar navbar-expand-lg fixed-top nav-menu">
         <a href="#" class="navbar-brand text-light text-uppercase"
-          ><img class="nav-logo" src="images/title-img2.png" alt=""
+          ><img
+            class="nav-logo"
+            src="images/title-img2.png"
+            alt="service bindery logo"
         /></a>
         <button
           class="navbar-toggler nav-button"
@@ -109,7 +112,10 @@
         <!-- end of title -->
         <div class="row my-5">
           <div class="col-md-4 text-center">
-            <i class="fa-solid services-icons fa-book fa-5x mb-4"></i>
+            <i
+              class="fa-solid services-icons fa-book fa-5x mb-4"
+              alt="book icon"
+            ></i>
             <h1 class="text-white mb-3 s-heading">Perfect Binding</h1>
             <p class="text-muted">
               Perfect Binding is the process in which the inside pages of a
@@ -120,7 +126,10 @@
             </p>
           </div>
           <div class="col-md-4 text-center">
-            <i class="fa-brands services-icons fa-readme fa-5x mb-4"></i>
+            <i
+              class="fa-brands services-icons fa-readme fa-5x mb-4"
+              alt="folding icon"
+            ></i>
             <h1 class="text-white mb-3 s-heading">Buckle Folding</h1>
             <p class="text-muted">
               UV coating, is a surface treatment process where liquid UV ink is
@@ -131,7 +140,10 @@
             </p>
           </div>
           <div class="col-md-4 text-center">
-            <i class="fa-solid services-icons fa-coins fa-5x mb-4"></i>
+            <i
+              class="fa-solid services-icons fa-coins fa-5x mb-4"
+              alt="image of a coil icon"
+            ></i>
             <h1 class="text-white mb-3 s-heading">Coil & Wire-O</h1>
             <p class="text-muted">
               This binding process includes punching the printed material,
@@ -149,6 +161,7 @@
           <div class="col-lg-5 text-center">
             <img
               src="images/home-imgs/carton1.png"
+              alt="picture of cartons"
               width="850"
               class="img-fluid carton-img mb-3"
             />
@@ -188,7 +201,11 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6 my-5">
             <div class="card border-0 card-shadow">
-              <img src="images/home-imgs/rock.jpeg" class="card-img" />
+              <img
+                src="images/home-imgs/rock.png"
+                class="card-img"
+                alt="picture of a spot UV business card"
+              />
               <div class="card-img-overlay">
                 <h5
                   class="text-white text-uppercase font-weight-bold p-2 services-heading card-text"
@@ -200,7 +217,11 @@
           </div>
           <div class="col-lg-4 col-sm-6 my-5">
             <div class="card border-0 card-shadow">
-              <img src="images/home-imgs/liberty.jpeg" class="card-img" />
+              <img
+                src="images/home-imgs/liberty.png"
+                class="card-img"
+                alt="picture of a spot UV business card"
+              />
               <div class="card-img-overlay">
                 <h5
                   class="text-white text-uppercase font-weight-bold p-2 heading card-text"
@@ -212,7 +233,11 @@
           </div>
           <div class="col-lg-4 col-sm-6 my-5">
             <div class="card border-0 card-shadow">
-              <img src="images/home-imgs/gentleman.jpeg" class="card-img" />
+              <img
+                src="images/home-imgs/gentleman.png"
+                class="card-img"
+                alt="picture of a spot UV business card"
+              />
               <div class="card-img-overlay">
                 <h5
                   class="text-white text-uppercase font-weight-bold p-2 heading card-text"
@@ -224,7 +249,11 @@
           </div>
           <div class="col-lg-4 col-sm-6 my-5">
             <div class="card border-0 card-shadow">
-              <img src="images/home-imgs/polished.jpeg" class="card-img" />
+              <img
+                src="images/home-imgs/polished.png"
+                class="card-img"
+                alt="picture of a spot UV business card"
+              />
               <div class="card-img-overlay">
                 <h5
                   class="text-white text-uppercase font-weight-bold p-2 heading card-text"
@@ -236,7 +265,11 @@
           </div>
           <div class="col-lg-4 col-sm-6 my-5">
             <div class="card border-0 card-shadow">
-              <img src="images/home-imgs/sublime.jpeg" class="card-img" />
+              <img
+                src="images/home-imgs/sublime.png"
+                class="card-img"
+                alt="picture of a spot UV business card"
+              />
               <div class="card-img-overlay">
                 <h5
                   class="text-white text-uppercase font-weight-bold p-2 heading card-text"
@@ -248,7 +281,11 @@
           </div>
           <div class="col-lg-4 col-sm-6 my-5">
             <div class="card border-0 card-shadow">
-              <img src="images/home-imgs/pridek.jpeg" class="card-img" />
+              <img
+                src="images/home-imgs/pridek.png"
+                class="card-img"
+                alt="picture of a spot UV business card"
+              />
               <div class="card-img-overlay">
                 <h5
                   class="text-white text-uppercase font-weight-bold p-2 services-heading card-text"
@@ -297,7 +334,8 @@
               <div class="carousel-inner google-car">
                 <div class="carousel-item active text-center">
                   <img
-                    src="images/home-imgs/customer1.jpeg"
+                    src="images/home-imgs/customer1.png"
+                    alt="customer image"
                     class="img-fluid rounded-circle m-5"
                     width="150"
                   />
@@ -327,7 +365,8 @@
                 </div>
                 <div class="carousel-item text-center">
                   <img
-                    src="images/home-imgs/customer2.jpeg"
+                    src="images/home-imgs/customer2.png"
+                    alt="customer image"
                     class="img-fluid rounded-circle m-5"
                     width="150"
                   />
@@ -360,7 +399,8 @@
                 </div>
                 <div class="carousel-item text-center">
                   <img
-                    src="images/home-imgs/customer3.jpeg"
+                    src="images/home-imgs/customer3.png"
+                    alt="customer image"
                     class="img-fluid rounded-circle m-5"
                     width="150"
                   />
@@ -438,7 +478,7 @@
             <div class="card card-2 text-medium py-4 my-4 mx-auto">
               <div class="card-body">
                 <h5 class="text-uppercase font-weight-bold mb-3">
-                  Quick Turn Around Times
+                  Quick Turn Around
                 </h5>
                 <div class="section-line mb-3"></div>
                 <p class="card-text">
