--- a/contact.html
+++ b/contact.html
@@ -88,12 +88,11 @@
     <section id="contact-a" class="text-center py-3 bg-dark">
       <div class="container">
         <h2 class="section-title text-light">We'd love to hear from you</h2>
-        <div class="bottom-line"></div>
-        <p class="lead text-light py-1 mb-4">
+        <p class="lead text-light py-1 mb-0">
           Have questions about our services, jobs, or pricing? Our team is ready
           to help you.
         </p>
-        <div class="section-line-services mt-0 mb-4"></div>
+        <div class="section-line-services mb-4 mt-3"></div>
         <form method="POST" data-netlify="true" data-netlify-recaptcha="true">
           <div class="text-fields">
             <input
@@ -174,7 +173,7 @@
         <!-- title -->
         <div class="row text-secondary text-center">
           <div class="col m-4">
-            <h1 class="display-4 mt-2 mb-2 services-fptb">
+            <h1 class="display-4 mt-0 mb-0 services-fptb">
               - <span class="h1-services">Florida's</span> Preferred Trade
               Bindery -
             </h1>
