--- a/services.html
+++ b/services.html
@@ -108,7 +108,11 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6 my-5">
             <div class="card border-0 card-shadow">
-              <img src="images/services/folding1.png" class="card-img" />
+              <img
+                src="images/services/folding1.png"
+                class="card-img"
+                alt="folding machine"
+              />
               <div class="card-img-overlay">
                 <h5
                   class="text-light text-uppercase font-weight-bold p-2 services-heading"
@@ -120,7 +124,11 @@
           </div>
           <div class="col-lg-4 col-sm-6 my-5">
             <div class="card border-0 card-shadow">
-              <img src="images/services/carton2.png" class="card-img" />
+              <img
+                src="images/services/carton2.png"
+                class="card-img"
+                alt="picture of folded cartons"
+              />
               <div class="card-img-overlay">
                 <h5
                   class="text-white text-uppercase font-weight-bold p-2 heading"
@@ -132,7 +140,11 @@
           </div>
           <div class="col-lg-4 col-sm-6 my-5">
             <div class="card border-0 card-shadow">
-              <img src="images/services/saddle1.png" class="card-img" />
+              <img
+                src="images/services/saddle1.png"
+                class="card-img"
+                alt="Picture of saddle stitched books"
+              />
               <div class="card-img-overlay">
                 <h5
                   class="text-white text-uppercase font-weight-bold p-2 heading"
@@ -144,7 +156,11 @@
           </div>
           <div class="col-lg-4 col-sm-6 my-5">
             <div class="card border-0 card-shadow">
-              <img src="images/services/coil-wireO.png" class="card-img" />
+              <img
+                src="images/services/coil-wireO.png"
+                class="card-img"
+                alt="coil and wire-0 books"
+              />
               <div class="card-img-overlay">
                 <h5
                   class="text-white text-uppercase font-weight-bold p-2 heading"
@@ -156,7 +172,11 @@
           </div>
           <div class="col-lg-4 col-sm-6 my-5">
             <div class="card border-0 card-shadow">
-              <img src="images/services/punch1.jpg" class="card-img" />
+              <img
+                src="images/services/punch1.jpg"
+                class="card-img"
+                alt="paper punching machine"
+              />
               <div class="card-img-overlay">
                 <h5
                   class="text-white text-uppercase font-weight-bold p-2 heading"
@@ -168,7 +188,11 @@
           </div>
           <div class="col-lg-4 col-sm-6 my-5">
             <div class="card border-0 card-shadow">
-              <img src="images/services/packaging1.jpg" class="card-img" />
+              <img
+                src="images/services/packaging1.jpg"
+                class="card-img"
+                alt="picture of a box"
+              />
               <div class="card-img-overlay">
                 <h5
                   class="text-white text-uppercase font-weight-bold p-2 services-heading"
@@ -212,21 +236,21 @@
                 <div class="carousel-item active">
                   <img
                     class="d-block w-100 h-100"
-                    src="images/home-imgs/liberty.jpeg"
+                    src="images/home-imgs/liberty.png"
                     alt="First slide"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     class="d-block w-100 h-100"
-                    src="images/home-imgs/polished.jpeg"
+                    src="images/home-imgs/polished.png"
                     alt="Second slide"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     class="d-block w-100 h-100"
-                    src="images/home-imgs/sublime.jpeg"
+                    src="images/home-imgs/sublime.png"
                     alt="Third slide"
                   />
                 </div>
@@ -265,7 +289,7 @@
               <span class="UV">UV</span> Coating
             </h2>
             <p class="meta">
-              <i class="fas fa-pencil fa-"></i> Posted by
+              <i class="fas fa-pencil" alt="pencil icon"></i> Posted by
               <strong>Service Bindery</strong> | 2023
             </p>
             <p class="p-services">
@@ -279,7 +303,7 @@
               target="_blank"
               class="btn btn-outline"
             >
-              <i class="fas fa-file fa-dark"></i>
+              <i class="fas fa-file fa-dark" alt="book icon"></i>
               UV Coating
             </a>
           </div>
@@ -294,10 +318,12 @@
       <div class="row g-0 w-100">
         <div class="column">
           <div class="column-2 bg-dark">
-            <h2 class="services-h2">Perfect Binding</h2>
+            <h2 class="services-h2">
+              <span class="perfect">Perfect</span> Binding
+            </h2>
             <p class="meta">
-              <i class="fas fa-book services-icons"></i> Posted by
-              <strong>Service Bindery</strong> | 2023
+              <i class="fas fa-book services-icons" alt="pencil icon"></i>
+              Posted by <strong>Service Bindery</strong> | 2023
             </p>
             <p class="p-services">
               Perfect Binding is a widely used soft cover book binding method.
@@ -312,7 +338,7 @@
               class="btn btn-primary"
               target="_blank"
             >
-              <i class="fas fa-share"></i>
+              <i class="fas fa-share" alt="share icon"></i>
               Perfect Binding
             </a>
           </div>
@@ -468,9 +494,9 @@
 
         <div class="column">
           <div class="column-2 sec-background">
-            <h2>Buckle <span class="UV">Folding</span></h2>
+            <h2><span class="UV">Buckle</span> Folding</h2>
             <p class="meta">
-              <i class="fas fa-pencil fa-white"></i> Posted by
+              <i class="fas fa-pencil fa-white" alt="pencil icon"></i> Posted by
               <strong>Service Bindery</strong> | 2023
             </p>
             <p class="p-services">
@@ -485,19 +511,19 @@
               target="_blank"
               class="btn btn-outline"
             >
-              <i class="fa-brands fa-readme fa-dark"></i>
+              <i class="fa-brands fa-readme fa-dark" alt="open book icon"></i>
               Buckle Folding
             </a>
           </div>
         </div>
       </div>
     </section>
-    <section class="bg-secondary py-0">
+    <section class="bg-light py-0">
       <div class="container-fluid">
         <!-- title -->
-        <div class="row text-light text-center">
+        <div class="row text-secondary text-center">
           <div class="col m-4">
-            <h1 class="display-4 mt-2 services-fptb">
+            <h1 class="display-4 mt-0 mb-0 services-fptb">
               - <span class="h1-services">Florida's</span> Preferred Trade
               Bindery -
             </h1>
