changed the logo to all white per request

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,10 @@
       <!-- navbar -->
       <nav class="navbar navbar-expand-lg fixed-top nav-menu">
         <a href="#" class="navbar-brand text-light text-uppercase"
-          ><img class="nav-logo" src="images/title-img2.png" alt=""
+          ><img
+            class="nav-logo"
+            src="images/title-img2.png"
+            alt="service bindery logo"
         /></a>
         <button
           class="navbar-toggler nav-button"
@@ -142,7 +145,7 @@
               ><i class="fas fa-envelope fa-2x mb-3" style="color: #00a2e2"></i
             ></a>
             <h3 class="icon-info">Email</h3>
-            <p>jeff.cleeves@servicebindery.com</p>
+            <p>servicebindery@yahoo.com</p>
           </div>
           <div>
             <a href="tel:(727) 823-9866"
