--- a/services.html
+++ b/services.html
@@ -208,7 +208,7 @@
     <!-- end of collection -->
 
     <!--UV COATING SECTION-->
-    <section id="blog" class="blog flex-columns flex-reverse">
+    <section id="blog1" class="blog flex-columns flex-reverse">
       <div class="row g-0">
         <div class="column">
           <div class="column-1">
@@ -314,7 +314,7 @@
 
     <!--PERFECT BINDING SECTION-->
 
-    <section id="blog" class="blog flex-columns flex-reverse">
+    <section id="blog2" class="blog flex-columns flex-reverse">
       <div class="row g-0 w-100">
         <div class="column">
           <div class="column-2 bg-dark">
@@ -417,7 +417,7 @@
     <!--END OF PERFECT BINDING SECTION-->
 
     <!--BUCKLE FOLDING SECTION-->
-    <section id="blog" class="blog flex-columns flex-reverse">
+    <section id="blog3" class="blog flex-columns flex-reverse">
       <div class="row g-0">
         <div class="column">
           <div class="column-1">
