--- a/index.html
+++ b/index.html
@@ -112,10 +112,12 @@
         <!-- end of title -->
         <div class="row my-5">
           <div class="col-md-4 text-center">
-            <i
-              class="fa-solid services-icons fa-book fa-5x mb-4"
-              alt="book icon"
-            ></i>
+            <a href="services.html"
+              ><i
+                class="fa-solid services-icons fa-book fa-5x mb-4"
+                alt="book icon"
+              ></i
+            ></a>
             <h1 class="text-white mb-3 s-heading">Perfect Binding</h1>
             <p class="text-muted">
               Perfect Binding is the process in which the inside pages of a
@@ -126,24 +128,28 @@
             </p>
           </div>
           <div class="col-md-4 text-center">
-            <i
-              class="fa-brands services-icons fa-readme fa-5x mb-4"
-              alt="folding icon"
-            ></i>
+            <a href="services.html"
+              ><i
+                class="fa-brands services-icons fa-readme fa-5x mb-4"
+                alt="folding icon"
+              ></i
+            ></a>
             <h1 class="text-white mb-3 s-heading">Buckle Folding</h1>
             <p class="text-muted">
-              UV coating, is a surface treatment process where liquid UV ink is
-              applied to a printed paper surface and cured on our screen press
-              using ultraviolet radiation. UV coating makes your printed piece
-              eye catching, and is perfect for products such as postcards,
-              presentation folders, or business cards.
+              Buckle folders work by feeding the paper at high speeds until it
+              can move no further; the reaction of the paper is to buckle
+              creating a fold. We offer a variety of specialty folding services
+              including gate folding and pharmaceutical folding! Reach out to us
+              so we can help you with your next folding project.
             </p>
           </div>
           <div class="col-md-4 text-center">
-            <i
-              class="fa-solid services-icons fa-coins fa-5x mb-4"
-              alt="image of a coil icon"
-            ></i>
+            <a href="services.html"
+              ><i
+                class="fa-solid services-icons fa-coins fa-5x mb-4"
+                alt="image of a coil icon"
+              ></i
+            ></a>
             <h1 class="text-white mb-3 s-heading">Coil & Wire-O</h1>
             <p class="text-muted">
               This binding process includes punching the printed material,
