fixed section lines for heading and added lines to the contact page

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
 
       <!-- banner -->
       <div class="text-light text-md-right text-center banner-services">
-        <h1 class="display-4 banner-heading">
+        <h1 class="display-4 banner-heading about-h">
           About <span class="service">Us</span>
         </h1>
       </div>
@@ -89,8 +89,8 @@
     <section id="cases" class="cases flex-grid section-padding bg-dark">
       <header class="section-header text-light">
         <h2 class="mb-3">Our Shop</h2>
-        <p>Here are some photos of Service Bindery in action!</p>
         <div class="section-line-services mt-0 mb-4"></div>
+        <p>Here are some photos of Service Bindery in action!</p>
       </header>
 
       <div class="row">
