--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
 
       <!-- banner -->
       <div class="text-light text-md-right text-center banner-services">
-        <h1 class="display-4 banner-heading">
+        <h1 class="display-4 banner-heading contact-h">
           Contact <span class="service">Us</span>
         </h1>
         <p class="lead banner-par">Questions? Here's how you can reach us!</p>
@@ -90,12 +90,14 @@
 
     <section id="contact-a" class="text-center py-3 bg-dark">
       <div class="container">
-        <h2 class="section-title text-light">We'd love to hear from you</h2>
-        <p class="lead text-light py-1 mb-0">
+        <h2 class="section-title text-light about-title">
+          We'd love to hear from you
+        </h2>
+        <div class="section-line-services mb-2 mt-3"></div>
+        <p class="lead text-light py-1 mb-4 ml-4 mr-4">
           Have questions about our services, jobs, or pricing? Our team is ready
           to help you.
         </p>
-        <div class="section-line-services mb-4 mt-3"></div>
         <form method="POST" data-netlify="true" data-netlify-recaptcha="true">
           <div class="text-fields">
             <input
