--- a/services.html
+++ b/services.html
@@ -92,10 +92,10 @@
               We are here for all of your
               <span class="bindery">bindery</span> needs.
             </h1>
+            <div class="section-line-services mt-0 mb-4"></div>
             <p class="lead">
               We offer traditional bindery work, and much more..
             </p>
-            <div class="section-line-services"></div>
           </div>
         </div>
       </div>
