--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
             <div class="card card-1 text-medium py-4 my-4 mx-auto">
               <div class="card-body">
                 <h5 class="text-uppercase font-weight-bold mb-3">
-                  Quality First Mindset
+                  Quality Mindset
                 </h5>
                 <div class="section-line mb-3"></div>
                 <p class="card-text">
